--- a/OrderApp/Base.lproj/Main.storyboard
+++ b/OrderApp/Base.lproj/Main.storyboard
@@ -256,7 +256,7 @@
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain" title="Dismiss"/>
                                 <connections>
-                                    <segue destination="3FP-7f-kJH" kind="unwind" unwindAction="unwindToOrderFor:towards:" id="6Fi-Vq-vrG"/>
+                                    <segue destination="3FP-7f-kJH" kind="unwind" identifier="unwindToOrder" unwindAction="unwindToOrderFor:towards:" id="6Fi-Vq-vrG"/>
                                 </connections>
                             </button>
                         </subviews>
