--- a/OrderApp/Base.lproj/Main.storyboard
+++ b/OrderApp/Base.lproj/Main.storyboard
@@ -58,7 +58,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="MenuItem" textLabel="SOI-8D-2hk" detailTextLabel="R9Q-y9-4ys" style="IBUITableViewCellStyleValue1" id="r2t-GK-k9T">
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="MenuItem" textLabel="SOI-8D-2hk" detailTextLabel="R9Q-y9-4ys" style="IBUITableViewCellStyleValue1" id="r2t-GK-k9T" customClass="MenuItemCell" customModule="OrderApp" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="50" width="393" height="43.666667938232422"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="r2t-GK-k9T" id="eDN-Pc-1aV">
@@ -166,6 +166,7 @@
                     <connections>
                         <outlet property="addToOrderButton" destination="YU9-4g-i76" id="mbZ-81-l6Q"/>
                         <outlet property="detailLabel" destination="Nj8-Cd-kSd" id="v8n-ZV-H2I"/>
+                        <outlet property="imageLabel" destination="7pL-jt-raG" id="tzU-UO-FEX"/>
                         <outlet property="nameLabel" destination="Ib9-Ic-NsZ" id="BVZ-97-C7V"/>
                         <outlet property="priceLabel" destination="8Xx-7p-9MK" id="Oc5-y0-Asx"/>
                     </connections>
@@ -349,7 +350,7 @@
         <image name="menucard.fill" catalog="system" width="105" height="128"/>
         <image name="photo.on.rectangle" catalog="system" width="128" height="98"/>
         <systemColor name="secondaryLabelColor">
-            <color red="0.23529411764705882" green="0.23529411764705882" blue="0.2627450980392157" alpha="0.59999999999999998" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.23529411759999999" green="0.23529411759999999" blue="0.26274509800000001" alpha="0.59999999999999998" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
